@@ -49,6 +49,7 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -104,7 +105,6 @@ import org.kohsuke.stapler.interceptor.RequirePOST;
  * @since 1.333
  */
 @ExportedBean
-@SuppressFBWarnings(value = "THROWS_METHOD_THROWS_CLAUSE_BASIC_EXCEPTION", justification = "TODO needs triage")
 public class UpdateSite {
     /**
      * What's the time stamp of data file?
@@ -215,7 +215,7 @@ public class UpdateSite {
 
     @Restricted(NoExternalUse.class)
     public @NonNull FormValidation updateDirectlyNow(boolean signatureCheck) throws IOException {
-        return updateData(DownloadService.loadJSON(new URL(getUrl() + "?id=" + URLEncoder.encode(getId(), "UTF-8") + "&version=" + URLEncoder.encode(Jenkins.VERSION, "UTF-8"))), signatureCheck);
+        return updateData(DownloadService.loadJSON(new URL(getUrl() + "?id=" + URLEncoder.encode(getId(), StandardCharsets.UTF_8) + "&version=" + URLEncoder.encode(Jenkins.VERSION, StandardCharsets.UTF_8))), signatureCheck);
     }
 
     private FormValidation updateData(String json, boolean signatureCheck)
@@ -530,7 +530,7 @@ public class UpdateSite {
      * Is this the legacy default update center site?
      * @deprecated
      *      Will be removed, currently returns always false.
-     * @since TODO
+     * @since 2.343
      */
     @Deprecated
     @Restricted(NoExternalUse.class)
@@ -893,6 +893,13 @@ public class UpdateSite {
         }
     }
 
+    @Restricted(NoExternalUse.class)
+    public enum WarningType {
+        CORE,
+        PLUGIN,
+        UNKNOWN
+    }
+
     /**
      * Represents a warning about a certain component, mostly related to known security issues.
      *
@@ -902,19 +909,13 @@ public class UpdateSite {
      * @since 2.40
      */
     @Restricted(NoExternalUse.class)
-    public static final class Warning {
-
-        public enum Type {
-            CORE,
-            PLUGIN,
-            UNKNOWN
-        }
+    public final class Warning {
 
         /**
          * The type classifier for this warning.
          */
         @NonNull
-        public /* final */ Type type;
+        public /* final */ WarningType type;
 
         /**
          * The globally unique ID of this warning.
@@ -969,9 +970,9 @@ public class UpdateSite {
         @Restricted(NoExternalUse.class)
         public Warning(JSONObject o) {
             try {
-                this.type = Type.valueOf(o.getString("type").toUpperCase(Locale.US));
+                this.type = WarningType.valueOf(o.getString("type").toUpperCase(Locale.US));
             } catch (IllegalArgumentException ex) {
-                this.type = Type.UNKNOWN;
+                this.type = WarningType.UNKNOWN;
             }
             this.id = o.getString("id");
             this.component = Util.intern(o.getString("name"));
@@ -1013,7 +1014,7 @@ public class UpdateSite {
         }
 
         public boolean isPluginWarning(@NonNull String pluginName) {
-            return type == Type.PLUGIN && pluginName.equals(this.component);
+            return type == WarningType.PLUGIN && pluginName.equals(this.component);
         }
 
         /**
@@ -1024,11 +1025,7 @@ public class UpdateSite {
             switch (this.type) {
                 case CORE:
                     VersionNumber current = Jenkins.getVersion();
-
-                    if (!isRelevantToVersion(current)) {
-                        return false;
-                    }
-                    return true;
+                    return isRelevantToVersion(current);
                 case PLUGIN:
 
                     // check whether plugin is installed
@@ -1046,6 +1043,40 @@ public class UpdateSite {
                 case UNKNOWN:
                 default:
                     return false;
+            }
+        }
+
+        /**
+         * Returns whether this warning is fixable by updating the affected component.
+         * @return {@code true} if the warning does not apply to the latest offered version of core or the affected plugin;
+         * {@code false} if it does; and {@code null} when the affected component isn't being offered, or it's a warning
+         * for something other than core or a plugin.
+         */
+        @SuppressFBWarnings(value = "NP_BOOLEAN_RETURN_NULL")
+        public Boolean isFixable() {
+            final Data data = UpdateSite.this.data;
+            if (data == null) {
+                return null;
+            }
+            switch (this.type) {
+                case CORE: {
+                    final Entry core = data.core;
+                    if (core == null) {
+                        return null;
+                    }
+                    final VersionNumber latestCoreVersion = new VersionNumber(core.version);
+                    return !isRelevantToVersion(latestCoreVersion);
+                }
+                case PLUGIN: {
+                    final Entry plugin = data.plugins.get(component);
+                    if (plugin == null) {
+                        return null;
+                    }
+                    final VersionNumber latestCoreVersion = new VersionNumber(plugin.version);
+                    return !isRelevantToVersion(latestCoreVersion);
+                }
+                default:
+                    return null;
             }
         }
 
